# school2024-test-task7

./: .gitignore  CMakeLists.txt  CROC_7.sln  Dockerfile  FileWorker.cs  Makefile  Program.cs  README.md  SamsonovKROKtask7.py  Top_3_croc.sln  app.py  commits.txt  generate_big_file.py  main.cpp  main.py  pom.xml  result.txt  solution.cpp  task.cpp  top3_contributors.py
CROC_7/: CommitsRating.cs  FileWorker.cs  Program.cs  RatingContributors.cs  result.txt
Resources/: commits.txt
Top_3_croc/: Employee.cs  Program.cs  ProgramReadFunc.cs  Top_3_croc.csproj  commits.txt
app/: __main__.py  file_manager.py  task.py
app/classes/: commits.py  contributor.py
components/: CommitsHandler.py  FileManager.py
config/: config.json
inc/: commits_leader.h
src/: Commit.cpp  Commit.hpp  CommitParser.cpp  CommitParser.hpp  ConfigHandler.cpp  ConfigHandler.hpp  Main.java  Top3Contributors.java  TopContributors.cpp  TopContributors.hpp  __init__.py  analyser.py  commit_parser.py  commits_leader.cpp  file_manager.py  getMostHardworkingContributors.java  main.cpp
src/dataOperations/: Commit.java
src/dataOperations/sorting/: CommitSorter.java
src/fileOperations/: CommitReader.java  ContrubutorsWriter.java  FileOperator.java
src/files/: commits.txt  paths.txt  result.txt
src/resources/: commits.txt  result.txt  settings.txt
test/: __main__.py  generator.py  tests.py
tests/: commits1.txt  commits2.txt  commits_hash.txt  commits_time.txt  commits_wrong_nickname.txt  result1.txt  result2.txt  result_big_file.txt  result_hash.txt  result_wrong_nickname.txt
(+14 files in other folders)
